rapihin html dan js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2>🔒 Masukkan Password</h2>
       <input id="pw" type="password" placeholder="ketik password..." />
       <button id="enterBtn">Masuk</button>
-      <p class="small">MasukkanPassword </code> </p>
+      <code><p class="small">MasukkanPassword </code> </p>
     </div>
   </div>
 
@@ -50,7 +50,6 @@
         <div class="uploadRow">
           <input id="fileInput" type="file" accept="image/*" hidden multiple>
           </button>
-          </button>
         </div>
 
         <div class="controlsSmall">
@@ -71,8 +70,6 @@
           <p id="letterText">Selamat Ulang Tahun Bitaaa kesayangan kuuu💗 Semoga panjang umur, sehat selalu, menjadi wanita yang rendah hati, dan semoga kita tetap selalu bareng-bareng 💓</p>
           <button id="closeLetter" class="btn">Tutup ✖</button>
         </div>
-      </div>
-    </div>
 
     <!-- confetti canvas -->
     <canvas id="confettiCanvas"></canvas>
@@ -82,6 +79,7 @@
     <!-- love explode button -->
     <div class="loveWrap">
       <button id="loveBtn" class="loveBtn">LOVE ❤</button>
+    </div>
     
     <footer class="small muted">Dibuat dengan ❤ khusus untuk BITA</footer>
   </main>
