--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Selamat Ulang Tahun 💖</title>
+  <title>Selamat Ulang Tahun Bitaa 💖</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -67,7 +67,7 @@
         </div>
         <div class="paper" id="letterPaper">
           <h3>Untukmu</h3>
-          <p id="letterText">Selamat Ulang Tahun Bitaaa kesayangan kuuu💗 Semoga panjang umur, sehat selalu, menjadi wanita yang rendah hati, dan semoga kita tetap selalu bareng-bareng 💓</p>
+          <p id="letterText">Selamat Ulang Tahun Bitaaa Temannkuuu💗 Semoga panjang umur, sehat selalu, menjadi wanita yang rendah hati, dan semoga kita tetap selalu bareng-bareng 💓</p>
           <button id="closeLetter" class="btn">Tutup ✖</button>
         </div>
 
